Further functionality added
-Insert items to menu
-Re-order existing items
-Edit existing via modal
-Delete existing from list

--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -228,3 +228,16 @@ body#tinymce {
 	width: 1%;
 	white-space: nowrap;
 }
+
+.structure.structureItems {
+    padding-bottom: $spacer;
+}
+
+.navigationLevel > .structureItems {
+    margin-left: $spacer;
+    padding-bottom: $spacer;
+}
+
+.structureItems:not(.structure) > .navigationLevel:first-child {
+    margin-top: $spacer;
+}
