--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,21 @@ body#tinymce {
 
 .wrapper > .main {
     flex-grow: 1;
+    padding: $spacer 0;
+}
+
+.bg404 {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.25;
+    font-size: 40vw;
+    line-height: 1;
+}
+
+@include media-breakpoint-up(lg) {
+    .bg404 {
+        font-size: 20rem;
+    }
 }
 
 .fullWidth {
@@ -72,6 +87,11 @@ body#tinymce {
     position: relative;
 }
 
+#navbarCollapse0 > .navbar-nav {
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
 li.dropdown {
     position: relative;
 }
@@ -84,6 +104,18 @@ li.dropdown {
     
     li.dropdown:not(:hover) > .dropdown-toggle:after {
         transform: rotate(90deg);
+    }
+    
+    #navbar0 .navbar-nav:not(.subMenu) > li.nav-item {
+        margin-left: $spacer * .75;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    #navbar0 .navbar-nav:not(.subMenu) > li.nav-item:first-child {
+        margin-left: 0;
     }
 }
 
@@ -117,6 +149,7 @@ li.nav-item > .dropdown-toggle:after {
         width: 100%;
         max-width: 320px;
         background-color: $secondary;
+        z-index: 100000;
     }
     
     #navbar0 .dropdown-toggle {
@@ -203,3 +236,83 @@ li.nav-item > .dropdown-toggle:after {
 }
 
 /* MAIN */
+
+.postsList {
+    align-items: stretch;
+}
+
+.postsList .postItem {
+    background: $light;
+    box-shadow: $box-shadow;
+    border-radius: $border-radius;
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    height: 100%;
+    overflow: hidden;
+}
+
+.postItem .postImage {
+    width: 100%;
+    background: #fff;
+    overflow: hidden;
+    position: relative;
+}
+
+.postItem .postImage:before {
+    content: "";
+    display: inline-block;
+    padding-top: 62.5%;
+}
+
+.postItem .postImage img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.postItem .postBody {
+    flex-grow: 1;
+    padding: 0 $spacer $spacer;
+    display: flex;
+    flex-direction: column;
+}
+
+.postItem .postTitle {
+    margin: 0;
+    padding: ($spacer * .25) 0;
+}
+
+.postItem .postDetails {
+    font-size: 0.75rem;
+}
+
+.postItem .postDetails > span {
+    margin-right: $spacer * .25;
+    font-weight: normal;
+    padding: ($spacer * .25) 0;
+}
+
+.postItem .fa {
+    font-weight: bold;
+}
+
+.postItem .postExcerpt {
+    padding: ($spacer * .25) 0;
+}
+
+.postItem .postLink {
+    display: flex;
+    flex-grow: 1;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding: ($spacer * .25) 0;
+}
