--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -138,6 +138,19 @@ body#tinymce {
 	text-decoration: none;
 }
 
+@include media-breakpoint-down(sm) {
+    #pageHeader .row > div:first-child {
+        display: none;
+    }
+    
+    .logout {
+        width: 100%;
+        text-align: center;
+        padding-top: map-get($spacers, 1) !important;
+        padding-bottom: map-get($spacers, 1) !important;
+    }
+}
+
 /* SIDEBAR */
 
 .sidebar::-webkit-scrollbar {
@@ -178,7 +191,7 @@ body#tinymce {
 	align-items: center;
 	justify-content: space-between;
 	cursor: pointer;
-	box-shadow: inset -20px 0 10px -6px #000;
+	box-shadow: inset 0 0 10px -6px #000;
 }
 
 .floatingToggle {
