Navigation dropdown increased z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -153,6 +153,7 @@ li.nav-item > .dropdown-toggle:after {
     right: 0;
     width: 320px;
     background: shade-color($secondary, 5);
+    z-index: 9999;
 }
 
 .subMenu .nav-link {
