--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,8 +3,8 @@
 
 $enable-negative-margins: true;
 
-$primary: #009688;
-$secondary: #005996;
+$primary: #2196f3;
+$secondary: #f44336;
 
 $theme-colors: (
 	"primary" : $primary,
