--- a/includes/mail-templates/default.html
+++ b/includes/mail-templates/default.html
@@ -2,7 +2,7 @@
     <body style="font-family: sans-serif; background: #f3f3f3; padding: 5rem 2rem; max-width: 1000px;">
         <div class="padding: 0 1rem; margin: 5rem auto;">
             <div style="background: #009688; padding: 1rem; display: flex; align-items: center; justify-content: center;">
-                <img src="images/clover-cms-logo.png" alt="Clover CMS Logo" style="display: block; width: 100%; max-width: 64px; margin-right: 1rem;">
+                <img src="../images/clover-cms-logo.png" alt="Clover CMS Logo" style="display: block; width: 100%; max-width: 64px; margin-right: 1rem;">
                 <span style="font-size: 32px; color: #fff;">Clover CMS</span>
             </div>
 
