--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,12 +67,29 @@ body#tinymce {
     margin-right: -50vw;
 }
 
+.breadcrumbs {
+    margin-bottom: map-get($spacers, 3);
+    background: $light;
+    border-radius: $border-radius;
+    padding-top: map-get($spacers, 2);
+    padding-bottom: map-get($spacers, 2);
+    padding-left: map-get($spacers, 1);
+    padding-right: map-get($spacers, 1);
+    color: $text-muted;
+}
+
 .breadcrumbs .breadcrumb {
     display: inline-block;
+    margin-bottom: 0;
+}
+
+.breadcrumbs .breadcrumb a {
+    color: $text-muted;
 }
 
 .breadcrumbs .breadcrumb.current {
     font-weight: bold;
+    color: $dark;
 }
 
 /* HEADER */
