--- a/scss/style.scss
+++ b/scss/style.scss
@@ -464,3 +464,129 @@ li.nav-item > .dropdown-toggle:after {
     content: " *";
     color: $danger;
 }
+
+table.calendar {
+    table-layout: fixed;
+}
+
+.calendar td {
+    position: relative;
+}
+
+.calendar td:after {
+    content: "";
+    display: inline-block;
+    padding-top: 62.5%;
+}
+
+.calendar td .calendarInner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    overflow-y: auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    padding: map-get($spacers, 2);
+}
+
+.calendar .calendarPast:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.5);
+    pointer-events: none;
+    z-index: 10;
+}
+
+.calendar .calendarEvent {
+    display: block;
+    background: $dark;
+    color: $light;
+    padding-left: map-get($spacers, 1);
+    padding-right: map-get($spacers, 1);
+    border-radius: $border-radius;
+    margin-top: map-get($spacers, 1);
+    cursor: pointer;
+}
+
+.calendar .calendarDay,
+.calendarSmall .calendarDay {
+    width: 25px;
+    height: 25px;
+    padding: map-get($spacers, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calendar .calendarDay.current,
+.calendarSmall .calendarDay.current {
+    border-radius: 100%;
+    background: $dark;
+    color: $light;
+}
+
+.calendarControls {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.calendarSmall > .row {
+    margin-top: -1px;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.calendarSmall > .row:first-child {
+    margin-top: 0;
+}
+
+.calendarSmall > .row > div {
+    border-color: $dark;
+    border-style: solid;
+    border-width: 1px;
+    margin-left: -1px;
+    padding: map-get($spacers, 2);
+}
+
+.calendarSmall > .row > div:first-child {
+    margin-left: 0;
+}
+
+.calendarSmall .calendarDow {
+    width: 65px;
+    text-transform: uppercase;
+    background: $primary;
+    color: $light;
+}
+
+.calendarSmall .calendarDate {
+    width: 44px;
+    text-align: center;
+}
+
+.calendarSmall .calendarTime {
+    min-width: 120px;
+}
+
+.calendarSmall .calendarDate {
+    background: $light;
+}
+
+@include media-breakpoint-down(sm) {
+    .calendarSmall > .row > div.calendarEvent {
+        margin-left: 0;
+        margin-top: -1px;
+    }
+}
