--- a/scss/style.scss
+++ b/scss/style.scss
@@ -250,7 +250,7 @@ li.nav-item > .dropdown-toggle:after {
 }
 
 #pageFooter .socials .social a {
-    transition: color 0.35s ease;
+    transition: color 0.15s ease;
 }
 
 .social#facebook a {
@@ -492,7 +492,6 @@ li.nav-item > .dropdown-toggle:after {
 .calendar th,
 .calendar td {
     position: relative;
-    width: 160px;
 }
 
 .calendar td:after {
@@ -576,7 +575,20 @@ li.nav-item > .dropdown-toggle:after {
 .calendarModal .eventLink:hover,
 .calendarModal .eventLink:active {
     filter: brightness(0.85);
-    transition: filter 0.35s linear;
+    transition: filter 0.15s ease-in-out;
+}
+
+.calendar .moreEventsLink {
+    border-radius: 100%;
+    text-decoration: none;
+    color: $light;
+    background: $primary;
+    transition: background 0.15s ease-in-out;
+}
+
+.calendar .moreEventsLink:hover,
+.calendar .moreEventsLink:active {
+    background: tint-color($primary, 10%);
 }
 
 .calendarSmall > .row {
@@ -621,12 +633,7 @@ li.nav-item > .dropdown-toggle:after {
     background: $light;
 }
 
-@include media-breakpoint-down(sm) {
-    .calendarSmall > .row > div.calendarEvent {
-        margin-left: 0;
-        margin-top: -1px;
-    }
-}
+
 
 .calendarSmall .moreEvents {
     padding-left: map-get($spacers, 1);
@@ -656,4 +663,61 @@ li.nav-item > .dropdown-toggle:after {
 
 .calendarModal .modal-header .btn-close {
     filter: invert(1) grayscale(100%) brightness(200%);
+}
+
+.calendar-lg.calendar th,
+.calendar-lg.calendar td,
+.calendar-md.calendar th,
+.calendar-md.calendar td {
+    overflow: hidden;
+    padding: 0;
+}
+
+.calendar-lg.calendar td .calendarInner,
+.calendar-md.calendar td .calendarInner {
+    padding: 0;
+}
+
+.calendar-lg.calendar td .calendarInner > .eventLink,
+.calendar-md.calendar td .calendarInner > .eventLink {
+    display: none;
+}
+
+.calendar-md.calendar th .headingSuffix {
+    display: none;
+}
+
+.calendar-sm.calendarSmall > .row > div.calendarEvent {
+    margin-left: 0;
+    margin-top: -1px;
+}
+
+
+@include media-breakpoint-down(lg) {
+    .calendar th,
+    .calendar td {
+        overflow: hidden;
+        padding: 0;
+    }
+
+    .calendar td .calendarInner {
+        padding: 0;
+    }
+
+    .calendar td .calendarInner > .eventLink {
+        display: none;
+    }
+}
+
+@include media-breakpoint-down(md) {
+    .calendar th .headingSuffix {
+        display: none;
+    }
+}
+
+@include media-breakpoint-down(sm) {
+    .calendarSmall > .row > div.calendarEvent {
+        margin-left: 0;
+        margin-top: -1px;
+    }
 }
