--- a/scss/style.scss
+++ b/scss/style.scss
@@ -300,6 +300,11 @@ li.nav-item > .dropdown-toggle:after {
 
 /* MAIN */
 
+.uc.content img {
+    max-width: 100%;
+    height: auto;
+}
+
 .carousel-inner {
     position: relative;
     overflow: hidden;
