Hide pending spinner by default

--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -287,6 +287,14 @@ body#tinymce {
     margin-top: $spacer;
 }
 
+.navigationLevel .pendingIcon {
+    display: none;
+}
+
+.navigationLevel.pending .pendingIcon {
+    display: block;
+}
+
 .carousel-inner {
     position: relative;
     overflow: hidden;
