Pending icon inline-block

--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -292,7 +292,7 @@ body#tinymce {
 }
 
 .navigationLevel.pending .pendingIcon {
-    display: inline;
+    display: inline-block;
 }
 
 .carousel-inner {
