Inline notification text

--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -135,7 +135,7 @@ body#tinymce {
 }
 
 .notifications > .notification .notificationText {
-    display: inline-block;
+    display: inline;
     margin-bottom: 5px;
 }
 
