Hero cover size by default

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -323,7 +323,7 @@ li.nav-item > .dropdown-toggle:after {
     height: 100%;
     width: 100%;
     padding: $spacer;
-    background-size: 100%;
+    background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
 }
