--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -378,7 +378,7 @@ body#tinymce {
     width: 100%;
     padding: $spacer;
     background-color: $dark;
-    background-size: 100%;
+    background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
 }
