Remove Stripe CSS

--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -531,7 +531,7 @@ body#tinymce {
 
 /* STRIPE */
 
-$stripe: #635BFF;
+/*$stripe: #635BFF;
 $stripeTest: #EC6805;
 
 .stripeModeBanner {
@@ -565,4 +565,4 @@ $stripeTest: #EC6805;
 .btn-stripe:active {
     background-color: shade-color($stripe, 25%);
     color: $white;
-}
+}*/
